# minisilver

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
doc/: midiexplanation.kra
src/: DistrhoPluginInfo.h  MiniSilver.hpp  PluginDSP.cpp  PluginDSP.hpp  PluginDSP_metadata.cpp  PluginDSP_midi.cpp  PluginDSP_parameters.cpp  PluginUI.cpp  PluginUI.hpp  PluginUI_colors.hpp  PluginUI_style.hpp  eightohat.hpp  imgui-knobs-svg.h  minisilver_imconfig.h
src/303/: ADAREnvelope.h  AcidFilter.hpp  AcidFormulas.hpp  AcidSynth.hpp  Osc303.hpp  SlideFilter.hpp  WowFilter.h
src/808/: HatSynth.hpp  OscMetal.hpp  Resonator.hpp
